# 2023-autumn-ab-python-hw-13-gelycot

./: .flake8  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/test_server/: Dockerfile
test/: test_client.py  test_todo_list_app.py
todo_list_app/: alembic.ini  api.py  api_router.py  asgi.py  auth.py  config.py  contracts.py  crud.py  database.py  server.py  web.py
todo_list_app/migrations/: env.py
todo_list_app/migrations/versions/: 72a945adcb07_rename_user_table_to_users.py  964cf31dcc93_add_salt_column_into_user_table.py  9a549ec5eeba_add_cascade_deleting_in_foreign_keys.py  abec0c96bfb9_database_creation.py
todo_list_app/models/: models.py
todo_list_app/templates/: login_form.html  new_task_list.html  task_list_form.html
todo_list_app/utils/: api_router.py  server.py  session_manager.py
