[tool.poetry]
name = "2023-autumn-ab-python-hw-13-gelycot"
version = "0.1.0"
description = ""
authors = ["chatka <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
jinja2 = "^3.1.2"
flake8 = "^6.1.0"
black = "^23.12.1"
bandit = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
omit = [
    "todo_list_app/models/*"
]
